<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeshDisplayController</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- General Strings -->
    <string name="general_back_button_label">back</string>
    
    <!-- Main menu strings -->
    <string name="enter_event_button_label">Enter Event</string>
    <string name="scan_button_label">Scan To Enter Event</string>
    <string name="about_button_label">About</string>
    <string name="preferences_button_label">Preferences</string>
    <string name="main_menu_text_box_title">Main Menu</string>
    <string name="main_menu_picture_alt">Image Unavailable</string>
    <string name="event_id_hint">Enter or create an event Id</string>
    
    <!-- About Mesh Display Activity strings -->
    <string name="about_mesh_display_title">About Mesh Display</string>
    <string name="about_mesh_display_back_button_label">Back</string>
    <string name="about_mesh_display_text">
        Mesh Display allows multiple phones to be combined
		to create dynamic displays. This Controller allows you create or enter events and view all 
		clients that register for the event.\n\nClients can be positioned on the screen by touching and 
		dragging the client id and text can be added by tapping on the client screen. Clients will automatically 
		appear and disappear as they enter and leave the event.
		\n\nNote that this app requires the Mesh Display server 
		to be set up - please contact us on +353 87 7784955 to set this if you are
		testing this app
	</string>
	
    <!-- Live Event Controller Activity strings -->
    <string name="event_info_button_label">Info</string>
    <string name="live_event_text_box_title">Live Mesh Display Event</string>
    
    <!-- Preference activity strings -->
    <string name="pref_server_url_title">Server URL</string>
    <string name="pref_server_url_edittext_title">Mesh Display Controller URL</string>
    <string name="pref_server_url_edittext_summary">Enter the server URL</string>
    <string name="pref_header_summary">The URL of the Mesh Display Server</string>
	
    <!-- User messages from activities -->
    <string name="connection_problem">There was a problem with the connection</string>

</resources>