<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EntryScreenAvtivity" >
    
   <TextView
       android:id="@+id/mainMenuTitle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:text="@string/main_menu_text_box_title"
       android:textAppearance="?android:attr/textAppearanceLarge" />
   
	<ImageView
	    android:id="@+id/mainMenuPicture"
		android:layout_below="@+id/mainMenuTitle"
		android:layout_above="@+id/buttonArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/main_menu_picture_alt" />
	
	<LinearLayout
	    android:id="@+id/buttonArea"
	    android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
	    
	    <EditText
	   	    android:id="@+id/eventIdEditText"
	   	    android:layout_width="250dp"
	   	    android:layout_height="wrap_content"
	   	    android:layout_gravity="center"
	        android:layout_weight="1"
	   	    android:layout_marginTop="19dp"
	   	    android:hint="@string/event_id_hint"
	   	    android:ems="10" >
		    <requestFocus />
		</EditText>
 
	    <Button
	        android:id="@+id/enterEventButton"
	        android:layout_width="250dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_weight="1"
	        android:text="@string/enter_event_button_label" />
	   	
	  	<Button
	        android:id="@+id/aboutButton"
	        android:layout_width="250dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_weight="1"
	        android:text="@string/about_button_label" />
    
    </LinearLayout>

</RelativeLayout>